# seclip

./: Cargo.toml  README.md  file.txt
.github/workflows/: CICD.yml  linux-build.yml  macos-build.yml  release.yml  rust.yml
src/: main.rs
